--- a/src/components/TaskManager/TaskItem/style.module.css
+++ b/src/components/TaskManager/TaskItem/style.module.css
@@ -36,7 +36,7 @@
   display: none;
   z-index: 999;
   padding: 5px;
-  width: 40%;
+  min-width: 100px;
   min-height: 50px;
   word-wrap: break-word;
   font-size: 12px;
