--- a/src/components/sharedComponent/Chips/style.module.css
+++ b/src/components/sharedComponent/Chips/style.module.css
@@ -1,15 +1,32 @@
 .chip {
+  padding: 5px 10px;
+  font-size: 10px;
+  pointer-events: all;
   background: #f6f6ff;
   border: 1px solid #395bd3;
+  color: #395bd3;
   border-radius: 50px;
-  width: 112px;
-  height: 26px;
+  min-width: 62px;
+  min-height: 26px;
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   padding: auto;
 }
 .chip p {
-  color: #395bd3;
-  font-size: 14px;
+  overflow-wrap: break-word !important;
+  text-overflow: unset !important;
+  white-space: normal !important;
+  word-break: break-word; /* Forces long words to break */
+}
+
+.deleteIcon {
+  margin-left: 8px;
+  cursor: pointer;
+  color: #a8b1d3;
+  font-size: 18px;
+}
+
+.deleteIcon:hover {
+  color: #67739e;
 }
