--- a/src/components/sharedComponent/FloatingLabelInput/style.module.css
+++ b/src/components/sharedComponent/FloatingLabelInput/style.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 5px;
 }
 
 .label {
@@ -14,7 +13,7 @@
   font-size: 16px;
   color: rgba(77, 77, 77, 0.5);
   transition: all 0.3s ease;
-  pointer-events: none; /* Prevents clicks on the label */
+  pointer-events: none; 
 }
 
 .inputField {
