--- a/src/components/sharedComponent/FloatingLabelTextArea/style.module.css
+++ b/src/components/sharedComponent/FloatingLabelTextArea/style.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 5px;
 }
 
 .label {
@@ -14,7 +13,7 @@
   font-size: 16px;
   color: #8385af;
   transition: all 0.3s ease;
-  pointer-events: none; /* Prevents clicks on the label */
+  pointer-events: none; 
 }
 
 .textareaField {
@@ -25,8 +24,8 @@
   border-radius: 8px;
   outline: none;
   box-sizing: border-box;
-  min-height: 100px; /* Adjust the height as needed */
-  resize: none; /* Prevent resizing of the textarea */
+  min-height: 100px; 
+  resize: none;
   transition: all 0.3s ease;
 }
 
