change height to min-height to allow expand based on content, remove unused place holder and imports

--- a/src/components/TaskManager/TaskFilter/style.module.css
+++ b/src/components/TaskManager/TaskFilter/style.module.css
@@ -10,7 +10,7 @@
   box-shadow: 0px 4px 16px 0px #c1c1c140;
   margin-top: 15px;
   margin-right: 30px;
-  height: 500px;
+  min-height: 500px;
 }
 .filter h5 {
   color: #0c1049;
