fix hydration error of delete dialog, using div inside p

--- a/src/components/TaskManager/DeleteDialog/style.module.css
+++ b/src/components/TaskManager/DeleteDialog/style.module.css
@@ -48,10 +48,13 @@
   color: #717298;
   line-height: 20px;
 }
-.dialogContent span {
+.dialogContent .taskTitle span {
   color: #000;
   font-weight: 600;
 }
 .dialogWrapper {
   padding: 20px;
+}
+.taskTitle {
+  display: block;
 }
