--- a/src/components/TaskManager/TaskItem/style.module.css
+++ b/src/components/TaskManager/TaskItem/style.module.css
@@ -1,8 +1,7 @@
 .taskItem {
   background-color: #fff;
   border-radius: 16px;
-  height: 100px;
-  /* grid-column: 2 / 12; Spans across all 12 columns */
+  min-height: 100px;
   padding: 10px;
   box-shadow: 0px 4px 16px 0px #c1c1c140;
   width: 100%;
@@ -12,6 +11,7 @@
 }
 .categories {
   display: flex;
+  flex-wrap: wrap;
   gap: 5px;
 }
 .title {
