--- a/src/components/sharedComponent/FloatingLabelInput/style.module.css
+++ b/src/components/sharedComponent/FloatingLabelInput/style.module.css
@@ -1,3 +1,4 @@
+@import "../../../styles/colors.css"; /* Import color variables */
 .formGroup {
   position: relative;
   display: flex;
@@ -29,7 +30,7 @@
 }
 
 .inputField:focus {
-  border-color: #395bd3;
+  border-color: var(--primary-color);
 }
 
 .inputField:focus + .label,
@@ -43,5 +44,5 @@
   padding: 0 5px;
 }
 .required {
-  color: #fe7c98;
+  color: var(--required-color);
 }
