--- a/src/components/TaskManager/StatusDropDown/style.module.css
+++ b/src/components/TaskManager/StatusDropDown/style.module.css
@@ -1,16 +1,17 @@
+@import "../../../styles/colors.css"; /* Import color variables */
 .complete {
-  background-color: #e1ffde;
-  color: #0a7900;
+  background-color: var(--status-completed-bg);
+  color: var(--status-completed);
 }
 .incomplete {
-  background-color: #fff2de;
-  color: #ff6b00;
+  background-color: var(--status-incomplete-bg);
+  color: var(--status-incomplete);
 }
 .incompleteCircle {
-  background-color: #ff6b00;
+  background-color: var(--status-incomplete);
 }
 .completeCircle {
-  background-color: #0a7900;
+  background-color: var(--status-completed);
 }
 .dropdown {
   position: relative;
@@ -83,7 +84,7 @@
 }
 .selected {
   background-color: #f7f9ff;
-  border: 1px solid #395bd3;
+  border: 1px solid var(--primary-color);
   border-radius: 4px;
 }
 .menu li:hover {
@@ -99,9 +100,9 @@
 }
 
 .completeCircle {
-  background-color: #0a7900;
+  background-color: var(--status-completed);
 }
 
 .incompleteCircle {
-  background-color: #ff6b00;
+  background-color: var(--status-incomplete);
 }
