--- a/src/components/sharedComponent/LoadingSpinner/style.module.css
+++ b/src/components/sharedComponent/LoadingSpinner/style.module.css
@@ -1,4 +1,5 @@
 /* Add this to styles.module.css */
+@import "../../../styles/colors.css"; /* Import color variables */
 .spinnerContainer {
   position: fixed;
   top: 0;
@@ -14,7 +15,7 @@
 
 .spinner {
   border: 4px solid rgba(255, 255, 255, 0.3); /* Light gray background */
-  border-top: 4px solid #395bd3; /* Blue spinner color */
+  border-top: 4px solid var(--primary-color); /* Blue spinner color */
   border-radius: 50%;
   width: 40px;
   height: 40px;
