--- a/src/components/sharedComponent/RadioButtonWithLabel/style.module.css
+++ b/src/components/sharedComponent/RadioButtonWithLabel/style.module.css
@@ -5,7 +5,9 @@
   grid-template-columns: 1em auto;
   gap: 0.5em;
 }
-
+.formControl p {
+  font-size: 14px;
+}
 input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
