--- a/src/components/TaskManager/CategorySelector/style.module.css
+++ b/src/components/TaskManager/CategorySelector/style.module.css
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
 .multiSelectContainer {
   width: 100%;
   max-width: 500px;
@@ -41,7 +40,7 @@
 }
 
 .chipContainer::-webkit-scrollbar-thumb:hover {
-  background-color: #2b4693;
+  background-color: var(--scrollbar-thumb-hover-color);
 }
 
 .input:focus {
@@ -62,7 +61,7 @@
 }
 
 .deleteIcon {
-  background-color: #f9f9f9;
+  background-color: var(--deleteIcon-bg);
   min-width: 20px;
   min-height: 20px;
   width: 20px;
@@ -70,14 +69,15 @@
   border-radius: 50%;
   padding: auto;
   cursor: pointer;
-  color: #a8b1d3;
+  color: var(--deleteIcon);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .deleteIcon:hover {
-  color: #67739e;
+  color: var(--deleteIcon-hover);
+  background-color: var(--white);
 }
 
 .dropdownContainer {
@@ -108,7 +108,7 @@
 }
 
 .dropdownItem:hover {
-  background-color: #f0f0f0;
+  background-color: var(--background-hover-light);
 }
 
 .addOptionContainer {
@@ -123,31 +123,13 @@
   padding: 8px;
   font-size: 14px;
   outline: none;
-  border: 1px solid #2b4693;
+  border: 1px solid var(--primary-color);
   border-top: none;
   border-right: none;
 }
 
-.addOptionButton {
-  padding: 8px 16px;
-  background-color: var(--primary-color);
-  color: white;
-  font-size: 16px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.addOptionButton:hover {
-  background-color: #2b4693;
-}
-
-.addOptionButton:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
 .iconBtn {
-  background-color: #f9f9f9;
+  background-color: var(--deleteIcon-bg);
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -159,15 +141,15 @@
   cursor: pointer;
 }
 .selectedDropdownItem {
-  background-color: #f7f9ff;
+  background-color: var(--background-selected);
 }
 
 .dropdownItem:hover:not(.selectedDropdownItem) {
-  background-color: #f5f5f5;
+  background-color: var(--background-dropdown-hover);
 }
 
 .selectedDropdownItem:hover {
-  background-color: #cfd6ea;
+  background-color: var(--background-selected-hover);
 }
 .inputContainer {
   position: relative;
@@ -175,7 +157,7 @@
 }
 
 .input:focus {
-  border-color: #8385af;
+  border-color: var(--inputs-border-label-color);
 }
 
 .label {
@@ -193,7 +175,7 @@
   top: 0;
   left: 10px;
   font-size: 12px;
-  color: #8385af;
+  color: var(--inputs-border-label-color);
   background: white;
   padding: 0 5px;
 }
