--- a/src/components/TaskManager/StatusDropDown/style.module.css
+++ b/src/components/TaskManager/StatusDropDown/style.module.css
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
 .complete {
   background-color: var(--status-completed-bg);
   color: var(--status-completed);
@@ -61,7 +60,7 @@
   top: 100%;
   left: 0;
   width: 150px;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 8px;
   list-style: none;
   margin: 0;
@@ -83,12 +82,12 @@
   cursor: pointer;
 }
 .selected {
-  background-color: #f7f9ff;
+  background-color: var(--background-selected);
   border: 1px solid var(--primary-color);
   border-radius: 4px;
 }
 .menu li:hover {
-  background-color: #f0f0f0;
+  background-color: var(--background-hover-light);
   border-radius: 4px;
 }
 
