--- a/src/components/TaskManager/TaskFilter/style.module.css
+++ b/src/components/TaskManager/TaskFilter/style.module.css
@@ -1,5 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
-
 .filter {
   grid-column: 2/4;
   background-color: var(--white);
@@ -8,7 +6,7 @@
   flex-direction: column;
   padding: 40px;
   gap: 30px;
-  box-shadow: 0px 4px 16px 0px #c1c1c140;
+  box-shadow: 0px 4px 16px 0px var(--box-shadow);
   margin-top: 15px;
   margin-right: 30px;
   min-height: 500px;
