--- a/src/components/TaskManager/TaskHeader/style.module.css
+++ b/src/components/TaskManager/TaskHeader/style.module.css
@@ -1,5 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
-
 .titleContainer {
   background-color: var(--white);
   border-radius: 16px;
@@ -10,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 40px;
-  box-shadow: 0px 4px 16px 0px #c1c1c140;
+  box-shadow: 0px 4px 16px 0px var(--box-shadow);
 }
 .title {
   font-size: 24px;
