--- a/src/components/sharedComponent/FloatingLabelInput/style.module.css
+++ b/src/components/sharedComponent/FloatingLabelInput/style.module.css
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
 .formGroup {
   position: relative;
   display: flex;
@@ -38,7 +37,7 @@
   top: 0px;
   left: 10px;
   font-size: 12px;
-  color: #8385af;
+  color: var(--inputs-border-label-color);
   border-radius: 8px;
   background: white;
   padding: 0 5px;
