--- a/src/components/sharedComponent/FloatingLabelTextArea/style.module.css
+++ b/src/components/sharedComponent/FloatingLabelTextArea/style.module.css
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
 .formGroup {
   position: relative;
   display: flex;
@@ -40,7 +39,7 @@
   top: 0;
   left: 10px;
   font-size: 12px;
-  color: #8385af;
+  color: var(--inputs-border-label-color);
   background: white;
   padding: 0 5px;
 }
