--- a/src/components/sharedComponent/RadioButtonWithLabel/style.module.css
+++ b/src/components/sharedComponent/RadioButtonWithLabel/style.module.css
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.css"; /* Import color variables */
 .formControl {
   font-size: 0.8rem;
   line-height: 1.1;
@@ -11,11 +10,11 @@ input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
   margin: 0;
-  background-color: #fff;
+  background-color: var(--white);
   font: inherit;
   width: 0.8rem;
   height: 0.8rem;
-  border: 1px solid #fff;
+  border: 1px solid var(--white);
   border-radius: 50%;
   display: grid;
   place-content: center;
