--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,56 +1,46 @@
-/* src/styles/colors.css */
+:root {
+  --primary-color: #395bd3;
+  --secondary-color: #f6f6ff;
 
-/* Primary Colors */
-html {
-  --primary-color: : #395BD3; /* Blue */ /* Blue */
-  --secondary-color: #F6F6FF; /* Green */
-  --tertiary-color: #f6f6ff; /* Yellow */
-
-  /* Neutral Colors */
   --black: #000000;
   --white: #ffffff;
   --gray-light: #dcdcdc;
   --gray-dark: #7f8c8d;
 
-  /* Status Colors */
-  --status-completed: #0A7900; /* Green */
-  --status-incomplete: #FF6B00; /* Red */
-  --status-completed-bg:#E1FFDE ; /* Green */
-  --status-incomplete-bg: #FFF2DE; /* Red */
+  --status-completed: #0a7900;
+  --status-incomplete: #ff6b00;
+  --status-completed-bg: #e1ffde;
+  --status-incomplete-bg: #fff2de;
 
-  --delete: #FF3093; /* Yellow */
-  --dark: #0c1049; /* Dark Blue */
-  --required-color:#fe7c98;
-
-  /* Background Colors */
   --background-light: #ecf0ff;
   --background-dark: #2c3e50;
+  --background-delete-dialog-img: #e6e6ff;
+  --background-hover-light: #f0f0f0;
+  --background-selected: #f7f9ff;
+  --background-dropdown-hover: #f5f5f5a6;
+  --background-selected-hover: #cfd6ea;
 
-  /* Text Colors */
-  --text-primary: #2c3e50; /* Dark Text */
-  --text-secondary: #95a5a6; /* Light Text */
-
-  /* Button Colors */
   --button-primary: #3498db;
   --button-secondary: #2ecc71;
 
-  /* Border Colors */
+  --text-primary: #2c3e50;
+  --text-secondary: #95a5a6;
+
   --border-light: #bdc3c7;
   --border-dark: #34495e;
 
-  --box-shadow:#c1c1c140
-  /* Custom Colors */
-    --task-item-bg: #fff; /* White */
-  --task-item-shadow: #c1c1c140; /* Light gray with alpha transparency */
---cancel-bg:#f2f5ff;
-/* Task Description */
-  --task-desc-text: #dfe1ff; /* Light Blue */
+  --cancel-bg: #f2f5ff;
+  --task-desc-text: #dfe1ff;
+  --inputs-border-label-color: #8385af;
+  --deleteIcon: #a8b1d3;
+  --deleteIcon-hover: #67739e;
 
-/* Arrow for Description Box */
-  --task-desc-arrow-bg: #0c1049; /* Dark Blue */
-  /* src/styles/colors.css */
+  --delete: #ff3093;
+  --dark: #0c1049;
+  --required-color: #fe7c98;
+  --deleteIcon-bg: #f9f9f9;
 
-/* Title Container */
+  --scrollbar-thumb-hover-color: #2b4693;
 
-
+  --box-shadow: #c1c1c140;
 }
