--- a/src/components/sharedComponent/Button/style.module.css
+++ b/src/components/sharedComponent/Button/style.module.css
@@ -15,8 +15,13 @@
 }
 
 .button:hover {
-  background: linear-gradient(90deg, #5a7dfb 0%, #4f70e8 22.15%, #2743a5 100%);
-  box-shadow: 0px 8px 16px 0px var(--primary-color) 40;
+  background: linear-gradient(
+    90deg,
+    var(--add-btn-gradient-start) 0%,
+    var(--add-btn-gradient-mid) 22.15%,
+    var(--add-btn-gradient-end) 100%
+  );
+  box-shadow: 0px 8px 16px 0px var(--add-btn-box-shadow-color);
 }
 
 .button p {
